# clutter-gst3

./: Makefile  README.md  clutter-gst3.spec
src/: Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
src/clutter-gst/: Makefile.am  Makefile.in  clutter-gst-auto-video-sink.c  clutter-gst-camera-device.c  clutter-gst-content.c  clutter-gst-enum-types.c  clutter-gst-enum-types.h  clutter-gst-marshal.c  clutter-gst-marshal.h  clutter-gst-player.c  clutter-gst-plugin.c  clutter-gst-types.c  clutter-gst-version.h.in  clutter-gst-video-sink.c
src/doc/: Makefile.in
src/doc/reference/: Makefile.am  Makefile.in  clutter-gst-docs.xml  clutter-gst-sections.txt  clutter-gst.types
src/doc/reference/html/: ClutterGstAspectratio.html  ClutterGstCamera.html  ClutterGstCameraDevice.html  ClutterGstCameraManager.html  ClutterGstContent.html  ClutterGstCrop.html  ClutterGstPlayback.html  ClutterGstPlayer.html  annotation-glossary.html  api-index-1-4.html  api-index-1-6.html  api-index-3-0.html  api-index-all.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  clutter-gst-Types.html  clutter-gst-Utilities.html  clutter-gst-Versioning-Macros.html  clutter-gst-Video-Sink.html  clutter-gst.devhelp2  index.html  index.sgml  license.html
src/examples/: Makefile.in  video-player.c
src/scripts/: Makefile.in
src/tests/: Makefile.in  test-alpha.c
